--- a/sam/template.yaml
+++ b/sam/template.yaml
@@ -12,6 +12,26 @@ Resources:
   HackerOneForwarderFunction:
     Type: AWS::Serverless::Function # More info about Function Resource: https://github.com/awslabs/serverless-application-model/blob/master/versions/2016-10-31.md#awsserverlessfunction
     Properties:
+      AssumeRolePolicyDocument: 
+        Statement: 
+          - 
+            Action: 
+              - "sts:AssumeRole"
+            Effect: Allow
+            Principal: 
+              Service: 
+                - lambda.amazonaws.com
+        Version: "2012-10-17"
+      Policies: 
+      - 
+        PolicyDocument: 
+          Statement: 
+            - 
+              Action: "securityhub:BatchImportFindings"
+              Effect: Allow
+              Resource: "arn:aws:securityhub:*:*:*"
+          Version: "2012-10-17"
+        PolicyName: SecurityHubImport
       CodeUri: hackerone_forwarder/
       Handler: app.lambda_handler
       Runtime: python3.7
