--- a/sam/template.yaml
+++ b/sam/template.yaml
@@ -65,7 +65,7 @@ Outputs:
   # ServerlessRestApi is an implicit API created out of Events key under Serverless::Function
   # Find out more about other implicit resources you can reference within SAM
   # https://github.com/awslabs/serverless-application-model/blob/master/docs/internals/generated_resources.rst#api
-  HackerOneForwarderApi:
+  HackerOneForwarderUrl:
     Description: "API Gateway endpoint URL for Prod stage for HackerOne Forwarder function"
     Value: !Sub "https://${HackerOneForwarderApi}.execute-api.${AWS::Region}.amazonaws.com/prod/aws-hackerone-findings/"
   HackerOneForwarderFunction:
